--- a/index.html
+++ b/index.html
@@ -6,10 +6,35 @@
     <title>Portfolio Cezaniltom Silva</title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/global.css">
+
+
 </head>
 <body>
 
-    <h1>teste</h1>
+    <div class="main">
+
+
+        <header class="header">
+            <img src="assets/cezaniltom_convert.png" alt="Foto do Cezaniltom Silva" class="photo">
+
+            <h1 class="title">Olá, <br>eu sou Cezaniltom Silva</h1>
+
+            <div class="informations">
+                <p>Desenvolvedor frontend</p>
+                <p>Ceará - BR</p>
+                <p>(85) 9 9172-8762</p>
+                <p>cezaniltom@outlook.com</p>
+            </div>
+
+        </header>
+    </div>
     
 </body>
 </html>
