Adicao de estilizacoes

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 
 
         <header class="header">
-            <img src="assets/cezaniltom_convert.png" alt="Foto do Cezaniltom Silva" class="photo">
+            <img src="assets/img/cezaniltom_convert.png" alt="Foto do Cezaniltom Silva" class="photo">
 
             <h1 class="title">Olá, <br>eu sou Cezaniltom Silva</h1>
 
-            <div class="informations">
-                <p>Desenvolvedor frontend</p>
-                <p>Ceará - BR</p>
-                <p>(85) 9 9172-8762</p>
-                <p>cezaniltom@outlook.com</p>
+            <div class="information">
+                <p class="job">Desenvolvedor frontend</p>
+                <p class="location">Ceará - BR</p>
+                <p class="phone">(85) 9 9172-8762</p>
+                <p class="email">cezaniltom@outlook.com</p>
             </div>
 
         </header>
