Finalizando informacoes iniciais

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/acordeon.css">
 
 
 </head>
@@ -27,13 +28,25 @@
             <h1 class="title">Olá, <br>eu sou Cezaniltom Silva</h1>
 
             <div class="information">
-                <p class="job">Desenvolvedor frontend</p>
+                <p class="job">Software Developer</p>
                 <p class="location">Ceará - BR</p>
                 <p class="phone">(85) 9 9172-8762</p>
                 <p class="email">cezaniltom@outlook.com</p>
             </div>
 
         </header>
+
+        <section class="acordeon">          
+            <button class="trigger">Idiomas</button>
+
+            <div content>
+                <ul>
+                    <li>Português</li>
+                    <li>Inglês</li>
+                    <li>Espanhol</li>
+                </ul>
+            </div>
+        </section>
     </div>
     
 </body>
