Adicionando a estilizacao e interacao na lista de idiomas

--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
 
         </header>
 
-        <section class="acordeon">          
-            <button class="trigger">Idiomas</button>
+        <section class="acordeon open">          
+            <button class="trigger">
+                    Idiomas
+            </button>
 
-            <div content>
+            <div class="content">
                 <ul>
                     <li>Português</li>
                     <li>Inglês</li>
@@ -49,5 +51,7 @@
         </section>
     </div>
     
+
+    <script src="assets/js/acordeon.js"></script>
 </body>
 </html>
