--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         </header>
 
-        <section class="acordeon open">          
+        <section class="acordeon">          
             <button class="trigger">
                     <h2>Idiomas</h2>
             </button>
@@ -56,7 +56,7 @@
             </div>
         </section>
 
-        <section class="acordeon open">          
+        <section class="acordeon">          
             <button class="trigger">
                     <h2>Skills</h2>
             </button>
@@ -64,7 +64,7 @@
             <div class="content">
                 <div class="skills">
                     <section class="tools">
-                        <h3>Habilidades Pessoais</h3>
+                        <h3>Habilidades Profissionais</h3>
                         <ul>
                             <li>
                                 <img src="assets/img/icons/tools/html.svg" alt="html" title="html">
@@ -125,5 +125,7 @@
     
 
     <script src="assets/js/acordeon.js"></script>
+    <script src="assets/js/api.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
