--- a/index.html
+++ b/index.html
@@ -25,18 +25,19 @@
 
 
         <header class="header">
-            <img src="assets/img/cezaniltom_convert.png" alt="Foto do Cezaniltom Silva" class="photo">
+            <img src="assets/img/cezaniltom_convert.png" alt="Foto de Perfil" class="photo profile.photo">
 
-            <h1 class="title">Olá, <br>eu sou Cezaniltom Silva</h1>
+            <h1 class="title">Olá, <br>eu sou <span class="profile.name">Carregando...</span>
+            </h1>
 
             <div class="information">
-                <p class="job">Software Developer</p>
-                <p class="location">Ceará - BR</p>
+                <p class="job"><span class="profile.job">Carregando...</span></p>
+                <p class="location"> <span class="profile.location">Carregando...</span></p>
                 <p class="phone">
-                    <a href="tel:(85)99172-8762">(85) 99172-8762</a>
+                    <a href="tel:(85)99172-8762" class="profile phone">Carregando...</a>
                 </p>
                 <p class="email">
-                    <a href="mailto:cezaniltom@outlook.com">cezaniltom@outlook.com</a>
+                    <a href="mailto:cezaniltom@outlook.com" class="profile.email">Carregando...</a>
                 </p>
             </div>
 
