--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 
 
         <header class="header">
-            <img src="assets/img/cezaniltom_convert.png" alt="Foto de Perfil" class="photo profile.photo">
+            <img src="assets/img/cezaniltom_convert.png" alt="Foto de Perfil" class="photo" id="profile.photo">
 
-            <h1 class="title">Olá, <br>eu sou <span class="profile.name">Carregando...</span>
+            <h1 class="title">Olá, <br>eu sou <span id="profile.name">Carregando...</span>
             </h1>
 
             <div class="information">
-                <p class="job"><span class="profile.job">Carregando...</span></p>
-                <p class="location"> <span class="profile.location">Carregando...</span></p>
+                <p class="job" id="profile.job">Carregando...</p>
+                <p class="location" id="profile.location">Carregando...</p>
                 <p class="phone">
-                    <a href="tel:(85)99172-8762" class="profile phone">Carregando...</a>
+                    <a href="tel:(85)99172-8762" id="profile.phone">Carregando...</a>
                 </p>
                 <p class="email">
-                    <a href="mailto:cezaniltom@outlook.com" class="profile.email">Carregando...</a>
+                    <a href="mailto:cezaniltom@outlook.com" id="profile.email">Carregando...</a>
                 </p>
             </div>
 
