--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
         <header class="header">
-            <img src="assets/img/cezaniltom_convert.png" alt="Foto de Perfil" class="photo" id="profile.photo">
+            <img src="assets/img/my-photo.png" alt="Foto de Perfil" class="photo" id="profile.photo">
 
             <h1 class="title">Olá, <br>eu sou <span id="profile.name">Carregando...</span>
             </h1>
@@ -87,7 +87,7 @@
     
                     <section class="personal">
                         <h3>Habilidades Pessoais</h3>
-                        <ul>
+                        <ul id="profile.skills.softSkills">
                             <li>Proatividade</li>
                             <li>Organização</li>
                             <li>Pensamento Analítico</li>
