--- a/index.html
+++ b/index.html
@@ -88,11 +88,9 @@
                     <section class="personal">
                         <h3>Habilidades Pessoais</h3>
                         <ul id="profile.skills.softSkills">
-                            <li>Proatividade</li>
-                            <li>Organização</li>
-                            <li>Pensamento Analítico</li>
-                            <li>Trabalho em equipe</li>
-                            <li>Flexibilidade</li>
+                            <li>Carregando...</li>
+                            <li>Carregando...</li>
+                            <li>Carregando...</li>
                         </ul>
                     </section>
                 </div>
