Dinamizando as hardskills

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="skills">
                     <section class="tools">
                         <h3>Habilidades Profissionais</h3>
-                        <ul>
+                        <ul id="profile.skills.hardSkills">
                             <li>
                                 <img src="assets/img/icons/tools/html.svg" alt="html" title="html">
                             </li>
