--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             </button>
 
             <div class="content">
-                <ul class="languages">
-                    <li>Português</li>
-                    <li>Inglês</li>
-                    <li>Espanhol</li>
+                <ul class="languages" id="profile.languages">
+                    <li>Carregando...</li>
+                    <li>Carregando...</li>
+                    <li>Carregando...</li>
                 </ul>
             </div>
         </section>
