--- a/index.html
+++ b/index.html
@@ -104,19 +104,7 @@
             </button>
 
             <div class="content">
-                <ul class="portfolio">
-                    <li>
-                        <h3 class="title github">Criando um app de lembrete</h3>
-                        <a href="https://www.google.com.br" target="_blank">Google.com</a>
-                    </li>
-                    <li>
-                        <h3 class="title github">Criando um app de lembrete</h3>
-                        <a href="http://www.google.com.br" target="_blank">Google.com</a>
-                    </li>
-                    <li>
-                        <h3 class="title github">Criando um app de lembrete</h3>
-                        <a href="https://www.google.com.br" target="_blank">Google.com</a>
-                    </li>
+                <ul class="portfolio" id="profile.portfolio">
                 </ul>
             </div>
         </section>
