--- a/index.html
+++ b/index.html
@@ -33,11 +33,8 @@
             <div class="information">
                 <p class="job" id="profile.job">Carregando...</p>
                 <p class="location" id="profile.location">Carregando...</p>
-                <p class="phone">
-                    <a href="tel:(85)99172-8762" id="profile.phone">Carregando...</a>
-                </p>
                 <p class="email">
-                    <a href="mailto:cezaniltom@outlook.com" id="profile.email">Carregando...</a>
+                    <a href="mailto:cezaniltom@outlook.com" id="profile.email">cezaniltom@outlook.com</a>
                 </p>
             </div>
 
